[project]
name = "quarto-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "patapelada", email = "77882237+patapelada@users.noreply.github.com"},
]
dependencies = ["fastapi[standard]>=0.115.12", "uvicorn>=0.34.3", "python-socketio>=5.13.0", "pydantic-socketio>=0.1.1", "requests>=2.32.4", "quarto-lib>=3.3.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "dotenv run -- uvicorn quarto_backend.main:app --reload"
prod = "uvicorn quarto_backend.main:app --host 0.0.0.0 --port 8000"
[dependency-groups]
ci = [
    "git-cliff>=2.9.1",
]
dev = [
    "pytest>=8.4.1",
]
